[gd_scene load_steps=118 format=2]

[ext_resource path="res://assets/mommyLarge/Idle/Idle_020.png" type="Texture" id=1]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_002.png" type="Texture" id=2]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_013.png" type="Texture" id=3]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_026.png" type="Texture" id=4]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_019.png" type="Texture" id=5]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_017.png" type="Texture" id=6]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_005.png" type="Texture" id=7]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_004.png" type="Texture" id=8]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_023.png" type="Texture" id=9]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_025.png" type="Texture" id=10]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_031.png" type="Texture" id=11]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_010.png" type="Texture" id=12]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_022.png" type="Texture" id=13]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_003.png" type="Texture" id=14]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_021.png" type="Texture" id=15]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_027.png" type="Texture" id=16]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_008.png" type="Texture" id=17]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_011.png" type="Texture" id=18]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_000.png" type="Texture" id=19]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_024.png" type="Texture" id=20]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_014.png" type="Texture" id=21]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_015.png" type="Texture" id=22]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_030.png" type="Texture" id=23]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_009.png" type="Texture" id=24]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_001.png" type="Texture" id=25]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_006.png" type="Texture" id=26]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_018.png" type="Texture" id=27]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_028.png" type="Texture" id=28]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_029.png" type="Texture" id=29]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_007.png" type="Texture" id=30]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_012.png" type="Texture" id=31]
[ext_resource path="res://assets/mommyLarge/Idle/Idle_016.png" type="Texture" id=32]
[ext_resource path="res://assets/mommyLarge/Running/Running_002.png" type="Texture" id=33]
[ext_resource path="res://assets/mommyLarge/Running/Running_010.png" type="Texture" id=34]
[ext_resource path="res://assets/mommyLarge/Running/Running_013.png" type="Texture" id=35]
[ext_resource path="res://assets/mommyLarge/Running/Running_015.png" type="Texture" id=36]
[ext_resource path="res://assets/mommyLarge/Running/Running_001.png" type="Texture" id=37]
[ext_resource path="res://assets/mommyLarge/Running/Running_006.png" type="Texture" id=38]
[ext_resource path="res://assets/mommyLarge/Running/Running_023.png" type="Texture" id=39]
[ext_resource path="res://assets/mommyLarge/Running/Running_008.png" type="Texture" id=40]
[ext_resource path="res://assets/mommyLarge/Running/Running_020.png" type="Texture" id=41]
[ext_resource path="res://assets/mommyLarge/Running/Running_003.png" type="Texture" id=42]
[ext_resource path="res://assets/mommyLarge/Running/Running_007.png" type="Texture" id=43]
[ext_resource path="res://assets/mommyLarge/Running/Running_014.png" type="Texture" id=44]
[ext_resource path="res://assets/mommyLarge/Running/Running_012.png" type="Texture" id=45]
[ext_resource path="res://assets/mommyLarge/Running/Running_009.png" type="Texture" id=46]
[ext_resource path="res://assets/mommyLarge/Running/Running_011.png" type="Texture" id=47]
[ext_resource path="res://assets/mommyLarge/Running/Running_021.png" type="Texture" id=48]
[ext_resource path="res://assets/mommyLarge/Running/Running_016.png" type="Texture" id=49]
[ext_resource path="res://assets/mommyLarge/Running/Running_017.png" type="Texture" id=50]
[ext_resource path="res://assets/mommyLarge/Running/Running_019.png" type="Texture" id=51]
[ext_resource path="res://assets/mommyLarge/Running/Running_000.png" type="Texture" id=52]
[ext_resource path="res://assets/mommyLarge/Running/Running_018.png" type="Texture" id=53]
[ext_resource path="res://assets/mommyLarge/Running/Running_022.png" type="Texture" id=54]
[ext_resource path="res://assets/mommyLarge/Running/Running_005.png" type="Texture" id=55]
[ext_resource path="res://assets/mommyLarge/Running/Running_004.png" type="Texture" id=56]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_009.png" type="Texture" id=57]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_011.png" type="Texture" id=58]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_010.png" type="Texture" id=59]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_014.png" type="Texture" id=60]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_012.png" type="Texture" id=61]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_013.png" type="Texture" id=62]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_015.png" type="Texture" id=63]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_000.png" type="Texture" id=64]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_001.png" type="Texture" id=65]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_002.png" type="Texture" id=66]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_007.png" type="Texture" id=67]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_004.png" type="Texture" id=68]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_003.png" type="Texture" id=69]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_005.png" type="Texture" id=70]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_006.png" type="Texture" id=71]
[ext_resource path="res://assets/mommyLarge/Attacking 01/Attacking 01_008.png" type="Texture" id=72]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_005.png" type="Texture" id=73]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_000.png" type="Texture" id=74]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_001.png" type="Texture" id=75]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_008.png" type="Texture" id=76]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_006.png" type="Texture" id=77]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_003.png" type="Texture" id=78]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_018.png" type="Texture" id=79]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_010.png" type="Texture" id=80]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_009.png" type="Texture" id=81]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_017.png" type="Texture" id=82]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_013.png" type="Texture" id=83]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_016.png" type="Texture" id=84]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_007.png" type="Texture" id=85]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_015.png" type="Texture" id=86]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_012.png" type="Texture" id=87]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_011.png" type="Texture" id=88]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_004.png" type="Texture" id=89]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_002.png" type="Texture" id=90]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_019.png" type="Texture" id=91]
[ext_resource path="res://assets/mommyLarge/Dying/Dying_014.png" type="Texture" id=92]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_017.png" type="Texture" id=93]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_007.png" type="Texture" id=94]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_008.png" type="Texture" id=95]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_019.png" type="Texture" id=96]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_003.png" type="Texture" id=97]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_004.png" type="Texture" id=98]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_006.png" type="Texture" id=99]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_011.png" type="Texture" id=100]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_012.png" type="Texture" id=101]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_000.png" type="Texture" id=102]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_009.png" type="Texture" id=103]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_016.png" type="Texture" id=104]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_018.png" type="Texture" id=105]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_002.png" type="Texture" id=106]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_001.png" type="Texture" id=107]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_005.png" type="Texture" id=108]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_015.png" type="Texture" id=109]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_013.png" type="Texture" id=110]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_010.png" type="Texture" id=111]
[ext_resource path="res://assets/mommyLarge/Hurt/Hurt_014.png" type="Texture" id=112]
[ext_resource path="res://escenas/enemy/enemy.gd" type="Script" id=113]
[ext_resource path="res://escenas/enemy/RayAtack.gd" type="Script" id=114]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 69 ), ExtResource( 68 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 67 ), ExtResource( 72 ), ExtResource( 57 ), ExtResource( 59 ), ExtResource( 58 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 60 ), ExtResource( 63 ) ],
"loop": true,
"name": "atacking",
"speed": 5.0
}, {
"frames": [ ExtResource( 74 ), ExtResource( 75 ), ExtResource( 90 ), ExtResource( 78 ), ExtResource( 89 ), ExtResource( 73 ), ExtResource( 77 ), ExtResource( 85 ), ExtResource( 76 ), ExtResource( 81 ), ExtResource( 80 ), ExtResource( 88 ), ExtResource( 87 ), ExtResource( 83 ), ExtResource( 92 ), ExtResource( 86 ), ExtResource( 84 ), ExtResource( 82 ), ExtResource( 79 ), ExtResource( 91 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 102 ), ExtResource( 107 ), ExtResource( 106 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 108 ), ExtResource( 99 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 103 ), ExtResource( 111 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 110 ), ExtResource( 112 ), ExtResource( 109 ), ExtResource( 104 ), ExtResource( 93 ), ExtResource( 105 ), ExtResource( 96 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 25 ), ExtResource( 2 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 26 ), ExtResource( 30 ), ExtResource( 17 ), ExtResource( 24 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 31 ), ExtResource( 3 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 32 ), ExtResource( 6 ), ExtResource( 27 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 20 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 23 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 52 ), ExtResource( 37 ), ExtResource( 33 ), ExtResource( 42 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 38 ), ExtResource( 43 ), ExtResource( 40 ), ExtResource( 46 ), ExtResource( 34 ), ExtResource( 47 ), ExtResource( 45 ), ExtResource( 35 ), ExtResource( 44 ), ExtResource( 36 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 53 ), ExtResource( 51 ), ExtResource( 41 ), ExtResource( 48 ), ExtResource( 54 ), ExtResource( 39 ) ],
"loop": true,
"name": "running",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 120, 248 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 140, 220 )

[node name="enemy" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 113 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -16, 32 )
scale = Vector2( 0.519, 0.466 )
frames = SubResource( 1 )
animation = "running"
frame = 4
speed_scale = 5.0
playing = true

[node name="RayAtack" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( 300.578, -68.6695 )
scale = Vector2( 1.92678, 2.14592 )
enabled = true
cast_to = Vector2( 800, 0 )
script = ExtResource( 114 )

[node name="RayAtack2" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( 300.578, -68.6695 )
scale = Vector2( 1.92678, 2.14592 )
enabled = true
cast_to = Vector2( 500, 0 )

[node name="floorDetection" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( 308.472, -68.693 )
enabled = true
cast_to = Vector2( 0, 700 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -20, 31.9999 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 2 )

[node name="leftRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -400, 0 )

[node name="rightRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 400, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -20, 40 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
